--- a/src/components/Portfolio/Portfolio.module.css
+++ b/src/components/Portfolio/Portfolio.module.css
@@ -25,7 +25,7 @@
 .portfolio .left-arrow,
 .portfolio .right-arrow {
     width: 30px;
-    height: calc(100% - 60px);
+    height: calc(100% - (var(--title-space) * 2));
     box-shadow: 0 0 30px var(--box-shadow-color);
     display: flex;
     align-items: center;
@@ -34,7 +34,7 @@
     cursor: pointer;
     transition: background-color 0.4s, opacity 0.4s;
     position: absolute;
-    top: 30px;
+    top: var(--title-space);
     z-index: 3;
     background-color: #ffffff;
     opacity: 0;
@@ -63,7 +63,8 @@
     gap: 5%;
     scroll-snap-type: x mandatory;
     padding-top: var(--title-space);
-    padding-bottom: var(--vertical-space);
+    padding-bottom: var(--title-space);
+    margin-bottom: calc(var(--vertical-space) - var(--title-space));
 }
 
 @media screen and (max-width: 1100px) {
